--- a/foundry.toml
+++ b/foundry.toml
@@ -4,4 +4,7 @@ out = 'out'
 libs = ['lib']
 verbosity = 5
 
+MAINNET_RPC_URL = 'https://eth-mainnet.g.alchemy.com/v2/lh2i9x_uHZnURi_yOJnAU49bIQWDsJ-w'
+
+
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
